Align Top Tracks correctly.

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ main {
   margin: auto;
 }
 
-h1{
+h1 {
   background-image: linear-gradient(25deg, #c234ff, #a571fe, #7d98fc, #23b8fa);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -17,13 +17,13 @@ h1{
   font-size: 4em;
   text-align: center;
 
-  text-shadow:
-  0px 11.1px 0px rgba(0, 0, 0, 0.018),
-  0px 22.2px 0px rgba(0, 0, 0, 0.026),
-  0px 33.4px 0px rgba(0, 0, 0, 0.032),
-  0px 44.6px 0px rgba(0, 0, 0, 0.038),
-  0px 56.5px 0px rgba(0, 0, 0, 0.044),
-  0px 68.3px 0px rgba(0, 0, 0, 0.052),
-  0px 80px 0px rgba(0, 0, 0, 0.07)
-;
+  text-shadow: 0px 11.1px 0px rgba(0, 0, 0, 0.018),
+    0px 22.2px 0px rgba(0, 0, 0, 0.026), 0px 33.4px 0px rgba(0, 0, 0, 0.032),
+    0px 44.6px 0px rgba(0, 0, 0, 0.038), 0px 56.5px 0px rgba(0, 0, 0, 0.044),
+    0px 68.3px 0px rgba(0, 0, 0, 0.052), 0px 80px 0px rgba(0, 0, 0, 0.07);
+}
+
+.section-heading {
+  color: rgb(11, 87, 208);
+  margin: 0 0 1em 0;
 }
