--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -3,6 +3,7 @@
     background: rgb(242, 246, 252);
     border-radius: 32px;
     transition: border-radius cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+    position: relative;
 }
 
 .card:hover {
